--- a/UnitTest++/Makefile
+++ b/UnitTest++/Makefile
@@ -1,7 +1,14 @@
 # all: %.o
 
-OBJ=./src/TestResults.o ./src/Checks.o ./src/AssertException.o ./src/CurrentTest.o ./src/tests/TestCheckMacros.o ./src/tests/TestUnitTest++.o ./src/tests/TestTestMacros.o ./src/tests/TestTestSuite.o ./src/tests/TestTimeConstraintMacro.o ./src/tests/TestTestList.o ./src/tests/TestMemoryOutStream.o ./src/tests/TestTest.o ./src/tests/TestTestResults.o ./src/tests/TestCurrentTest.o ./src/tests/TestDeferredTestReporter.o ./src/tests/TestChecks.o ./src/tests/TestTestRunner.o ./src/tests/Main.o ./src/tests/TestAssertHandler.o ./src/tests/TestTimeConstraint.o ./src/tests/TestXmlTestReporter.o ./src/TimeConstraint.o ./src/Posix/SignalTranslator.o ./src/Posix/TimeHelpers.o ./src/ReportAssert.o ./src/TestReporter.o ./src/TestRunner.o ./src/Test.o ./src/TestList.o ./src/DeferredTestReporter.o ./src/TestReporterStdout.o ./src/DeferredTestResult.o ./src/MemoryOutStream.o ./src/XmlTestReporter.o ./src/JUnitStyleReporter.o ./src/TestDetails.o
+OBJ=./src/TestResults.o ./src/Checks.o ./src/AssertException.o ./src/CurrentTest.o ./src/tests/TestCheckMacros.o ./src/tests/TestUnitTest++.o ./src/tests/TestTestMacros.o ./src/tests/TestTestSuite.o ./src/tests/TestTimeConstraintMacro.o ./src/tests/TestTestList.o ./src/tests/TestMemoryOutStream.o ./src/tests/TestTest.o ./src/tests/TestTestResults.o ./src/tests/TestCurrentTest.o ./src/tests/TestDeferredTestReporter.o ./src/tests/TestChecks.o ./src/tests/TestTestRunner.o ./src/tests/Main.o ./src/tests/TestAssertHandler.o ./src/tests/TestTimeConstraint.o ./src/tests/TestXmlTestReporter.o ./src/TimeConstraint.o ./src/ReportAssert.o ./src/TestReporter.o ./src/TestRunner.o ./src/Test.o ./src/TestList.o ./src/DeferredTestReporter.o ./src/TestReporterStdout.o ./src/DeferredTestResult.o ./src/MemoryOutStream.o ./src/XmlTestReporter.o ./src/JUnitStyleReporter.o ./src/TestDetails.o
+UNAME=$(shell uname)
+MINGW=$(findstring MINGW,$(UNAME))
 
+ifeq ($(MINGW),MINGW)
+	OBJ+= ./src/Win32/TimeHelpers.o
+else
+	OBJ+= ./src/Posix/SignalTranslator.o ./src/Posix/TimeHelpers.o
+endif
 
 lib: message-lib $(OBJ)
 	@ar rcs libUnitTest++.a $(OBJ)
@@ -10,11 +17,14 @@ message-lib:
 	@echo "\033[31mBuilding UnitTest++\033[0m"
 
 ./src/%.o: %.cpp
-	@gcc -p -Wall -std=c++0x -I./include  -g -c $<
+	@gcc -Wall -std=c++0x -I./include  -g -c $<
+	
+./src/Win32/%.o: %.cpp
+	@gcc -Wall -std=c++0x -I./include  -g -c $<
 
 ./src/Posix/%.o: %.cpp
-	@gcc -p -Wall -std=c++0x -I./include  -g -c $<
+	@gcc -Wall -std=c++0x -I./include  -g -c $<
 
 clean:
 	@echo "\033[31mCleaning UnitTest++\033[0m"
-	-@rm *.o 2>/dev/null
+	-@rm -f $(OBJ)
