--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="dmypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -34,7 +34,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug Linux">
-				<Option output="dmypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -196,6 +196,9 @@
 				<doxyfile_dot />
 				<general />
 			</DoxyBlocks>
+			<lib_finder>
+				<lib name="gtkmm-3.0" />
+			</lib_finder>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
