--- a/mypattern-data/Makefile
+++ b/mypattern-data/Makefile
@@ -1,12 +1,12 @@
 # all: %.o
 
-OBJ=./src/filereader.o ./src/xmlattribute.o ./src/xmlexception.o ./src/xmlelement.o ./src/xmlfilereader.o ./src/xmlnode.o
-CC_OPTIONS=`pkg-config --cflags --libs gtkmm-3.0`
+OBJ=./src/filereader.o ./src/xmlattribute.o ./src/xmlexception.o ./src/xmlelement.o ./src/xmlfilereader.o ./src/xmlnode.o ./src/exceptions/filenotfoundexception.o
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
 
 INCLUDES=-I./include -I../mypattern-base/include/ -I../mypattern-exceptions/include
 
 LIB=libmypattern-data.a
-CC=gcc -p -Wall $(CC_OPTIONS) -std=c++0x
+CC=gcc -Wall $(CC_OPTIONS) -std=c++0x
 
 libmypattern-data: message $(OBJ)
 	@ar rcs $(LIB) $(OBJ)
@@ -20,4 +20,4 @@ message:
 
 clean:
 	@echo "\033[31mCleaning mypattern-data\033[0m"
-	-@rm $(OBJ) 2>/dev/null
+	-@rm $(OBJ)
