--- a/trunk/UnitTest++/UnitTest++.cbp
+++ b/trunk/UnitTest++/UnitTest++.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option platforms="Windows;" />
-				<Option output="./bin/Debug/libUnitTest++.a" prefix_auto="0" extension_auto="0" />
+				<Option output="libd_UnitTest++.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="./bin/Debug/" />
 				<Option type="2" />
@@ -35,7 +35,7 @@
 			</Target>
 			<Target title="Release">
 				<Option platforms="Windows;" />
-				<Option output="./bin/Release/libUnitTest++.a" prefix_auto="0" extension_auto="0" />
+				<Option output="libUnitTest++.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="./bin/Release/" />
 				<Option type="2" />
@@ -65,7 +65,7 @@
 			</Target>
 			<Target title="Debug Linux">
 				<Option platforms="Unix;Mac;" />
-				<Option output="./bin/Debug/libUnitTest++.a" prefix_auto="0" extension_auto="0" />
+				<Option output="libd_UnitTest++.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="./bin/Debug/" />
 				<Option type="2" />
@@ -92,7 +92,7 @@
 			</Target>
 			<Target title="Release Linux">
 				<Option platforms="Unix;Mac;" />
-				<Option output="./bin/Release/libUnitTest++.a" prefix_auto="0" extension_auto="0" />
+				<Option output="libUnitTest++.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
 				<Option object_output="./bin/Release/" />
 				<Option type="2" />
