--- a/trunk/mypattern-cad/Makefile
+++ b/trunk/mypattern-cad/Makefile
@@ -3,18 +3,17 @@
 OBJ=./src/size.o ./src/patterncolumnrecord.o ./src/undocommand.o ./src/undocommandqueue.o ./src/selectnamewindow.o ./src/renamepartundocommand.o ./src/cadmainwindow.o ./src/mainwindow.o ./src/program.o
 CPP=./src/size.cpp ./src/patterncolumnrecord.cpp ./src/undocommand.cpp ./src/undocommandqueue.cpp ./src/selectnamewindow.cpp ./src/renamepartundocommand.cpp ./src/cadmainwindow.cpp ./src/mainwindow.cpp ./src/program.cpp
 
-INCLUDES=-I./include -I../mypattern-base/include/
+INCLUDES=-I./include -I../mypattern-base/include/ -I../mypattern-data/include -I../mypattern-exceptions/include
 
-LIBDIRS=-L../mypattern-base/ -L../mypattern-draw/
-#-L/usr/lib/x86_64-linux-gnu/ -L/usr/lib/i386-linux-gnu/
-LIBRARIES=-lmypattern-base -lmypattern-draw
+LIBDIRS=-L../mypattern-base/ -L../mypattern-draw/ -L../mypattern-exceptions/ -L../mypattern-data/
+LIBRARIES=-lmypattern-base -lmypattern-draw -lmypattern-exceptions -lmypattern-data
 
-OUT=libmypattern-cad
-CC=g++ -p -Wall -std=c++0x
-CC_OPTIONS=
+OUT=mypattern-cad
+CC=g++ -Wall -std=c++0x
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
 
 mypattern-cad: message-mypattern-cad
-	@$(CC) $(CC_OPTIONS) $(LIBDIRS) $(INCLUDES) -o $(OUT) main.cpp $(CPP) $(LIBRARIES) `pkg-config --cflags --libs gtkmm-3.0`
+	$(CC) $(LIBDIRS) $(INCLUDES) -o $(OUT) main.cpp $(CPP) $(LIBRARIES) $(CC_OPTIONS)
 	@cp ../GUI/mypattern-cad.glade .
 
 message-mypattern-cad:
@@ -28,5 +27,5 @@ message-mypattern-cad:
 
 clean:
 	@echo "\033[31mCleaning mypattern-base\033[0m"
-	-@rm $(OUT) 2>/dev/null
-	-@rm mypattern-cad.glade 2>/dev/null
+	-@rm $(OUT)
+	-@rm mypattern-cad.glade
