--- a/trunk/mypattern-draw/Makefile
+++ b/trunk/mypattern-draw/Makefile
@@ -2,11 +2,11 @@
 
 OBJ=./src/patterndrawer.o ./src/papersettings.o ./src/drawoptions.o ./src/exceptions/pageoutofrangeexception.o ./src/cairopatterndrawer.o 
 
-INCLUDES=-I./include -I../mypattern-base/include -I../mypattern-base/include/exceptions -I/usr/include/glibmm-2.4/ -I/usr/lib/x86_64-linux-gnu/glibmm-2.4/include -I/usr/lib/i386-linux-gnu/glibmm-2.4/include/ -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/lib/i386-linux-gnu/glib-2.0/include/ -I/usr/include/cairomm-1.0/ -I/usr/include/sigc++-2.0/ -I/usr/lib/i386-linux-gnu/sigc++-2.0/include/ -I/usr/lib/x86_64-linux-gnu/sigc++-2.0/include/ -I/usr/include/cairo/ -I/usr/include/freetype2/ -I/usr/lib/i386-linux-gnu/cairomm-1.0/include/ -I/usr/lib/x86_64-linux-gnu/cairomm-1.0/include/
+INCLUDES=-I./include -I../mypattern-base/include -I../mypattern-base/include/exceptions
 
 LIB=libmypattern-draw.a
-CC=gcc -p -Wall -std=c++0x
-CC_OPTIONS=
+CC=gcc -Wall -std=c++0x
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
 
 libmypattern-draw: message-libmypattern-draw $(OBJ)
 	@ar rcs $(LIB) $(OBJ)
@@ -22,4 +22,4 @@ message-libmypattern-draw:
 
 clean:
 	@echo "\033[31mCleaning mypattern-draw\033[0m"
-	-@rm $(OBJ) 2>/dev/null
+	-@rm $(OBJ)
