--- a/trunk/mypattern-draw/mypattern-draw.cbp
+++ b/trunk/mypattern-draw/mypattern-draw.cbp
@@ -14,6 +14,7 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-Wall" />
 					<Add option="-g" />
 				</Compiler>
@@ -77,6 +78,7 @@
 		<Compiler>
 			<Add directory="include" />
 			<Add directory="../mypattern-base/include" />
+			<Add directory="$(GTK_BASEPATH)/include" />
 		</Compiler>
 		<Unit filename="include/cairopatterndrawer.h" />
 		<Unit filename="include/drawoptions.h" />
@@ -91,6 +93,10 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
+			<lib_finder>
+				<lib name="gtkmm-3.0" />
+			</lib_finder>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
