--- a/trunk/mypattern-exceptions/mypattern-exceptions.cbp
+++ b/trunk/mypattern-exceptions/mypattern-exceptions.cbp
@@ -34,12 +34,17 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Compiler>
+			<Add directory="include" />
+		</Compiler>
+		<Unit filename="src/exception.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
+			<lib_finder>
+				<lib name="gtkmm-3.0" />
+			</lib_finder>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
