--- a/mypattern-data-test/Makefile
+++ b/mypattern-data-test/Makefile
@@ -1,23 +1,29 @@
 # all: %.o
 
-CPP=./xmlnodetest.cpp ./xmlelementtest.cpp ./main.cpp ./xmlparametertest.cpp
+OBJ=./xmlnodetest.o ./xmlelementtest.o ./main.o ./xmlparametertest.o
+DEBUG?=FALSE
 
-CC_OPTIONS=`pkg-config --cflags --libs gtkmm-3.0`
+CC_OPTIONS=-Wall -std=c++0x $(shell pkg-config --cflags --libs gtkmm-3.0) 
+
+ifeq ($(DEBUG), TRUE)
+	CC_OPTIONS+= -g
+endif
 
 INCLUDES=-I../mypattern-base/include -I../mypattern-data/include -I../UnitTest++/src -I./include -I../mypattern-exceptions/include
 
 LIBDIRS=-L../mypattern-base/ -L../mypattern-data/ -L../UnitTest++/ -L../mypattern-exceptions
-LIBRARIES=-lUnitTest++ -lmypattern-data  -lmypattern-base -lmypattern-exceptions -lglibmm-2.4 -lsigc-2.0
+LIBRARIES=-lUnitTest++ -lmypattern-data -lmypattern-base -lmypattern-exceptions
 
-mypattern-data-test: message-mypattern-data-test
-	@g++ $(LIBDIRS) $(INCLUDES) -o mypattern-data-test $(CPP) -std=c++0x  $(LIBRARIES) $(CC_OPTIONS)
+mypattern-data-test: message-mypattern-data-test $(OBJ)
+	@g++ $(LIBDIRS) $(INCLUDES) $(OBJ) $(LIBRARIES) $(CC_OPTIONS) -o mypattern-data-test
 
 message-mypattern-data-test:
 	@echo "\033[31mBuilding mypattern-data-test\033[0m"
 
 %.o: %.cpp
-	@gcc -p -Wall -std=c++0x $(CC_OPTIONS)  -I../FLAT/include -I../UnitTest++/src  -g -c $<
+	@gcc $(CC_OPTIONS) -c $(INCLUDES) $<
 
 clean:
 	@echo "\033[31mCleaning mypattern-data-test\033[0m"
 	-@rm ./mypattern-data-test 2>/dev/null
+	-@rm ./*.o 2>/dev/null
