--- a/mypattern-base-test/Makefile
+++ b/mypattern-base-test/Makefile
@@ -5,8 +5,8 @@ OBJ=./src/UNT_SumTerm.o ./src/UNT_QuotientTerm.o ./src/UNT_DifferenceTerm.o ./sr
 
 INCLUDES=-I../mypattern-base/include -I../UnitTest++/src -I./include -I../mypattern-exceptions/include -I../mypattern-data/include
 
-CC=gcc -Wall -std=c++0x
-CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
+CC=gcc
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0) -Wall -std=c++0x
 
 LIBDIRS=-L../mypattern-base/ -L../UnitTest++/ -L../mypattern-exceptions/ -L../mypattern-data/
 LIBRARIES=-lUnitTest++ -lmypattern-base -lmypattern-exceptions -lmypattern-data
@@ -23,7 +23,7 @@ run_test: mypattern-base-test
 
 
 ./src/%.o: ./src/%.cpp
-	@$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@  -g -c $<
+	@"$(CC)" $(CC_OPTIONS) $(INCLUDES) -o $@  -g -c $<
 
 clean:
 	@echo "\033[31mCleaning mypattern-base-test\033[0m"
