--- a/mypattern-base/Makefile
+++ b/mypattern-base/Makefile
@@ -5,8 +5,8 @@ OBJ=./src/patternerror.o ./src/user.o ./src/point.o ./src/measurevalue.o ./src/c
 INCLUDES=-I./include -I../mypattern-exceptions/include -I../mypattern-data/include
 
 LIB=libmypattern-base.a
-CC=gcc -Wall -std=c++0x
-CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
+CC=gcc
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0) -Wall -std=c++0x
 
 libmypattern-base: message-libmypattern-base $(OBJ)
 	@ar rcs $(LIB) $(OBJ)
@@ -15,16 +15,16 @@ message-libmypattern-base:
 	@echo "\033[31mBuilding mypattern-base\033[0m"
 
 ./src/exceptions/%.o: ./src/exceptions/%.cpp
-	@$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
+	@"$(CC)" $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
 
 ./src/%.o: ./src/%.cpp
-	@$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
+	@"$(CC)" $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
 
 ./src/evaluation/%.o: ./src/evaluation/%.cpp
-	@$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
+	@"$(CC)" $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
 
 ./src/evaluation/formula/%.o: ./src/evaluation/formula/%.cpp
-	@$(CC) $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
+	@"$(CC)" $(CC_OPTIONS) $(INCLUDES) -o $@ -g -c $<
 
 clean:
 	@echo "\033[31mCleaning mypattern-base\033[0m"
